add second pipeline to example workspace make log response more detailed on runtime add runs command improve log command
